--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -32,7 +32,7 @@ body {
   text-align: center;
 }
 
-.site-title {
+.site-header h1 {
   margin: 0 0 10px 0;
   font-size: clamp(34px, 6vw, 64px);
   font-weight: 700;
@@ -41,10 +41,11 @@ body {
 }
 
 .lead {
-  margin: 0;
+margin: 0px auto;
   color: #475569;
-  font-size: 17px;
+  font-size: 16px;
   max-width: 65ch;
+  text-align: center;
 }
 
 .content {
@@ -172,10 +173,11 @@ body {
   cursor: pointer;
   background: #0b1220;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+  font-weight: medium;
   font-size: 15px;
   box-shadow: 0 8px 22px rgba(11, 18, 32, 0.08);
+  letter-spacing: 0.05em;
 }
 
 .btn-like:hover {
